# Taskmate

./: .dockerignore  .gitignore  Dockerfile  README.md  SQLite 表草案  babel.config.cjs  dockerfile  index.html  jest.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  release.md  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  main.yml  release.yml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  create_database.rs  file_handler.rs  main.rs  protocol.rs  tray.rs
src/assets/: index.ts
src/assets/svg/: svgs.ts
src/components/: AssignRightBar.vue  Sider.vue  Tab-detail.vue  TreeMenu.vue
src/components/AssignContent/: FileContent.vue
src/components/AssignLeftBar/: Sider.vue  TreeMenu.vue
src/components/AssignRightBar/: AssignButton.vue  AssignInfo.vue  AssignRightBar.vue  Card.vue
src/components/ChatInner/: ChatInner.vue  ChatInnerFile.vue  ChatInnerFiles.vue  ChatInnerFooter.vue  ChatInnerMessages.vue
src/components/OverviewRightComponent/: OverViewMain.vue  OverViewRightCard.vue  OverviewMiddleCard.vue
src/components/SubmitComponent/: SubmitRightCourseCard.vue
src/components/util/: Loader.vue  StudentSvg.vue  SvgIcon.vue  TeacherSvg.vue
src/composable/: assign.ts  grade.ts  index.ts  router.ts  serverRequest.ts  statistics.ts
src/router/: index.ts
src/service/request/: index.ts  request.ts
src/store/: assign.ts  assignview.ts  card.ts  chat.ts  course.ts  courseview.ts  index.ts  statistics.ts  submit.ts  todo.ts
src/typing/: system.d.ts
src/util/: index.ts
src/util/auth/: index.ts
src/view/: Assign.vue  AssignSetting.vue  AssignStatistics.vue  AssignView.vue  CourseView.vue  Empty.vue  Grading.vue  Homework.vue  Index.vue  Loading.vue  Login.vue  Main.vue  Modify.vue  Overview.vue  Register.vue  Set.vue  Submit.vue  View.vue
tests/unit/: AssignLeftBar.test.js  Index.test.js  OverView.test.js  Submit.test.js
(+124 files in other folders)
